[package]
name = "random_img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
image = "0.25.1"
futures = "0.3"
rand = "0.8.5"
